Make 'neutral' checked by default and add bar-charting of the results!

--- a/src/quiz.html
+++ b/src/quiz.html
@@ -16,7 +16,7 @@
                     <input type="radio" id={{$index}} name="{{$index}}" value="1">
                     <label for={{$index}}>Slightly disagree</label><br>
                     
-                    <input type="radio" id={{$index}} name="{{$index}}" value="2">
+                    <input type="radio" id={{$index}} name="{{$index}}" value="2" checked>
                     <label for={{$index}}>Neutral</label><br>
                     
                     <input type="radio" id={{$index}} name="{{$index}}" value="3">
