--- a/src/results.html
+++ b/src/results.html
@@ -1,12 +1,57 @@
 <!DOCTYPE HTML>
 <html>
-    <head>
-        <title>Big 5 Personality Test</title>
-    </head>
-    <body>
-        <h1>Results</h1>
-        {{range $trait, $score := .}}
-            <br>{{$trait}}: {{$score}}
-        {{end}}
-    </body>
+
+<head>
+    <title>Big 5 Personality Test</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+</head>
+
+<body>
+    <h1>Results</h1>
+
+    <div>
+        <canvas id="myChart"></canvas>
+    </div>
+
+    {{range $trait, $score := .}}
+    <br>{{$trait}}: {{$score}}
+    {{end}}
+
+    <script>
+        const ctx = document.getElementById('myChart');
+        /*
+        This is a hack to work around the fact that JSON arrays aren't allowed to have
+        trailing commas! 
+        */
+        let labelString = "{{range $trait, $score := .}}{{$trait}},{{end}}"
+        let modifiedLabelString = labelString.slice(0, -1);
+        let labels = modifiedLabelString.split(",");
+
+        let valueString = "{{range $trait, $score := .}}{{$score}},{{end}}"
+        let modifiedValueString = valueString.slice(0, -1);
+        let values = modifiedValueString.split(",");
+
+        new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: labels,
+                datasets: [{
+                    label: 'Trait score',
+                    data: values,
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                scales: {
+                    y: {
+                        min: -1,
+                        max: 20
+                    }
+                }
+            }
+        });
+    </script>
+
+</body>
+
 </html>
